<resources>
    <string name="plant_list_home_icon">Plant List</string>
    <string name="add_plant_home_icon">Add Plant</string>
    <string name="search_plant_home_icon">Search Plant</string>
    <string name="app_name">MyPlantBook</string>
    <string name="action_settings">Settings</string>
    <string name="activity_plant_search">PlantSearchActivity</string>
    <string name="search_your_plant">Search your plant</string>
    <string name="plant_name_title">Plant Name</string>
    <string name="search_button">Search</string>
    <string name="title_search_plant">Search Result</string>
    <string name="title_activity_plant_details">PlantDetailsActivity</string>
    <string name="plant_name">Plant</string>
    <string name="plant_info">Details</string>
    <string name="activity_add_new_plant">AddNewPlantActivity</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="upload_image_button">UPLOAD</string>
    <string name="add_plant_button">Add</string>
    <string name="title_list_plant">My Plants</string>
    <string name="plant_title">Title</string>
    <string name="list_plant_info">Details</string>
    <string name="menu_edit"><u>Edit</u></string>
    <string name="menu_delete"><u>Delete</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_plant_grid_list">PlantGridList</string>
    <string name="your_plant">Your Plants</string>
    <string name="list_plant_name">Name</string>
</resources>
