<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombackground"
    tools:context=".AddNewPlant"
    tools:showIn="@layout/activity_add_new_plant">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:text="@string/add_new_plant"
        android:id="@+id/addPlantTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


    <EditText
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NewPlantNameUserInput"
        android:layout_below="@+id/addPlantTitle"
        android:width="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:hint="Enter New Plant Name"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:id="@+id/plantImageAdd"
        android:layout_below="@+id/NewPlantNameUserInput"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="16dp"
        android:background="#BDBDBD"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image_button"
        android:id="@+id/uploadImageButton"
        android:layout_below="@+id/NewPlantNameUserInput"
        android:layout_toRightOf="@+id/plantImageAdd"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:onClick="uploadImageButtonClick"/>


    <EditText
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewPlantInfoUserInput"
        android:layout_below="@+id/plantImageAdd"
        android:height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Enter Plant Details..."/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_plant_button"
        android:id="@+id/addPlantButton"
        android:layout_below="@+id/NewPlantInfoUserInput"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:onClick="addPlantButtonClick"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:text="@string/title_list_plant"
        android:id="@+id/newPlantList"
        android:layout_below="@+id/addPlantButton"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/newPlantList"
        android:id="@+id/customPlantList"></ListView>

</RelativeLayout>