<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/custombackground"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listPlantIconClick">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_margin="16dp"
            android:src="@drawable/listplant"
            android:id="@+id/iconPlantList"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:text="@string/plant_list_home_icon"
            android:id="@+id/plantListHomeIconText"
            android:layout_toRightOf="@+id/iconPlantList"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addPlantIconClick">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_margin="16dp"
            android:id="@+id/iconAddPlant"
            android:src="@drawable/addplant"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:text="@string/add_plant_home_icon"
            android:id="@+id/addPlantHomeIconText"
            android:layout_toRightOf="@+id/iconAddPlant"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchPlantIconClick">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_margin="16dp"
            android:id="@+id/iconPlantSearch"
            android:src="@drawable/searchplant"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:text="@string/search_plant_home_icon"
            android:id="@+id/searchPlantHomeIconText"
            android:layout_toRightOf="@+id/iconPlantSearch"
            android:layout_centerVertical="true"/>

    </RelativeLayout>


</LinearLayout>